# cmake-project-template

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  lib_source.cpp
src/include/MyLibrary/: lib_header.h
test/: CMakeLists.txt  tests_source.cpp
